--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -17,14 +17,14 @@
         <div>
             <%= form_tag("/search", method: "get") do %>
               <%= text_field_tag 'q', '', class: 'front-search-block__input', data: {controller: "autoFocus"} %>
-              <%= submit_tag 'Søk', class: 'front-search-block__search-button button-primary' %>
+              <%= submit_tag 'Søk', class: 'front-search-block__search-button button button-primary' %>
             <% end %>
         </div>
     </div>
 
     <div class="front-search-block__create-box" >
         <form action="<%= new_ad_path %>">
-            <button class="button-primary" type="submit">Lei ut tingene dine her</button>
+            <button class="button button-primary" type="submit">Lei ut tingene dine her</button>
         </form>
     </div>
 
