--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,8 +1,8 @@
 <%= render partial: "shared/personal_bar", locals: { selected: "Dine annonser" } %>
 
-<div class="container">
+<div class="container locations-list">
     <div class="row">
-        <div class="eight columns">
+        <div class="ten columns">
 
             <p id="notice"><%= notice %></p>
 
@@ -10,26 +10,29 @@
 
             <table>
                 <thead>
-                <tr>
-                    <th>Favoritt</th>
-                    <th>Adresse</th>
-                    <th>Poststed</th>
-                    <th colspan="2"></th>
-                </tr>
+                    <tr>
+                        <th></th>
+                        <th>Adresse</th>
+                        <th>Poststed</th>
+                        <th colspan="2"></th>
+                    </tr>
                 </thead>
 
                 <tbody>
                 <% @locations.each do |location| %>
                     <tr>
-                        <td><%= location.favorite %></td>
+                        <td class="locations-list__favorite-cell">
+                            <% if location.favorite %>
+                                <%= evil_icon 'ei-star', size: :s, class: 'locations-list__favorite-button locations-list__favorite-button--gold' %>
+                            <% else %>
+                                <%= button_to make_favorite_location_path(location), class: "button" do %>
+                                    <%= evil_icon 'ei-star', size: :s, class: 'locations-list__favorite-button' %>
+                                <% end %>
+                            <% end %>
+                        </td>
 
                         <td><%= location.address_line %></td>
                         <td><%= location.post_code %> <%= location.city %></td>
-                        <!--
-                        <td><%= location.lat %></td>
-                        <td><%= location.lon %></td>
-                        -->
-                        <td><%= button_to 'Favoritt', make_favorite_location_path(location) %></td>
                         <td><%= link_to 'Rediger', edit_location_path(location) %></td>
                         <td><%= link_to 'Slett', location, method: :delete, data: {confirm: 'Er du sikker på at du vil slette?'} %></td>
                     </tr>
