Tweaking top bar a bit

--- a/app/assets/stylesheets/_top_bar.scss
+++ b/app/assets/stylesheets/_top_bar.scss
@@ -99,6 +99,8 @@ $top-bar-height: 52px;
 
     &__top-section {
         margin-left: $standard-spacing / 2;
+        margin-right: $standard-spacing / 2;
+        color: white;
     }
 
     &__admin-label {
