Added identity management box to edit profile

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -19,6 +19,8 @@
               <%= link_to  "See / edit my locations", locations_path %>
             <% end %>
 
+            <%= render partial: "edit_identity", locals: {title: "Koble konto din"}  %>
+
         </div>
     </div>
 </div>
