Updated gfx for category selection

--- a/app/assets/stylesheets/_new_ad_type_selector.scss
+++ b/app/assets/stylesheets/_new_ad_type_selector.scss
@@ -19,7 +19,7 @@
         border: solid 2px white;
         border-radius: 50%;
         overflow: hidden;
-        padding-top: 20%;
+        padding-top: 16px;
     }
 
     &__title {
