Tweaked look of admin link a bit

--- a/app/assets/stylesheets/_top_bar.scss
+++ b/app/assets/stylesheets/_top_bar.scss
@@ -103,7 +103,7 @@ $top-bar-height: 52px;
         color: white;
     }
 
-    &__admin-label {
+    &__admin-link {
         background-color: red;
         color: white;
         border-radius: 6px;
