--- a/app/views/ads/search.html.erb
+++ b/app/views/ads/search.html.erb
@@ -49,8 +49,10 @@
 
         <div class="search-result-view-chooser" data-controller="responsiveSearchResult">
             <hr>
-            <button data-show-list-toggle class="button">Vis treff</button>
-            <button data-show-map-toggle class="button">Vis kart</button>
+            <div class="search-result-view-chooser__segment-holder">
+                <button data-show-list-toggle class="search-result-view-chooser__segment-button search-result-view-chooser__segment-button--left search-result-view-chooser__segment-button--selected">Vis treff</button>
+                <button data-show-map-toggle class="search-result-view-chooser__segment-button search-result-view-chooser__segment-button--right">Vis kart</button>
+            </div>
         </div>
 
     </div>
