Tidied profile page a bit, and added anchors for the different sections

--- a/app/views/users/_edit_identity.html.erb
+++ b/app/views/users/_edit_identity.html.erb
@@ -1,4 +1,4 @@
-<%= render layout: "gray_box", locals: {title: "Rediger profil"} do %>
+<%= render layout: "gray_box", locals: {title: "Rediger tilkoblede kontoer", id: "identities"} do %>
 
 <%
   providers = [
