--- a/app/views/users/_edit_registration.html.erb
+++ b/app/views/users/_edit_registration.html.erb
@@ -1,5 +1,5 @@
 
-<%= render layout: "gray_box", locals: {title: "Bytte passord"} do %>
+<%= render layout: "gray_box", locals: {title: "Bytte passord", id: "password"} do %>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
 
         <%= devise_error_messages! %>
