add link to placeholders

--- a/app/views/application/_main_footer.html.erb
+++ b/app/views/application/_main_footer.html.erb
@@ -13,9 +13,9 @@
             <div class="four columns">
                 <h6 class="about-footer__title">Kundeservice</h6>
                 <ul class="about-footer__list">
-                    <li class="about-footer__list-item">Ofte stilte spørsmål</li>
-                    <li class="about-footer__list-item">Kontaktinformasjon</li>
-                    <li class="about-footer__list-item">Om oss</li>
+                    <li class="about-footer__list-item"><%= link_to 'Ofte stilte spørsmål', faq_path %></li>
+                    <li class="about-footer__list-item"><%= link_to 'Kontaktinformasjon', contact_path %></li>
+                    <li class="about-footer__list-item"><%= link_to 'Om oss', about_us_path %></li>
                 </ul>
             </div>
             <div class="four columns">
