Added custom layout for "articles", misc pages that need prose

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
         <%= render partial: "flash_bar" %>
     </header>
 
-    <%= yield %>
+    <%= content_for?(:content) ? yield(:content) : yield %>
 
     <% if not @supress_footer %>
         <%= render partial: "main_footer" %>
