Some placeholder text and styling for about/faq/contact

--- a/app/views/misc/about.html.erb
+++ b/app/views/misc/about.html.erb
@@ -1,2 +1,4 @@
-<h1>Misc#about</h1>
-<p>Find me in app/views/misc/about.html.erb</p>
+<h1>Om plendit</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, dolorem excepturi expedita inventore laboriosam magnam minima molestiae nemo quidem recusandae similique sunt voluptatem. Ab aliquid eius, ex maxime quam repellat!</p>
+
+<iframe width="560" height="315" src="<%= Rails.configuration.x.frontpage.explainer_video_url %>" frameborder="0" allowfullscreen></iframe>
