--- a/app/views/misc/contact.html.erb
+++ b/app/views/misc/contact.html.erb
@@ -1,2 +1,16 @@
-<h1>Misc#contact</h1>
-<p>Find me in app/views/misc/contact.html.erb</p>
+<h1>Kontakt Plendit</h1>
+
+<table>
+    <tr>
+        <th>E-post:</th>
+        <td><%= mail_to Rails.configuration.x.customerservice.email %></td>
+    </tr>
+    <tr>
+        <th>Telefon:</th>
+        <td></td>
+    </tr>
+    <tr>
+        <th>Postadresse:</th>
+        <td></td>
+    </tr>
+</table>
