--- a/app/views/misc/faq.html.erb
+++ b/app/views/misc/faq.html.erb
@@ -1,2 +1,69 @@
-<h1>Misc#faq</h1>
-<p>Find me in app/views/misc/faq.html.erb</p>
+<h1>Ofte stilte spørsmål</h1>
+
+<ol>
+    <li><a href="#q-what-is-it">Hva er Plendit</a></li>
+    <li><a href="#q-rentable">Hva kan jeg leie ut?</a></li>
+    <li><a href="#q-payment">Hvordan fungerer betaling?</a></li>
+    <li><a href="#q-insurance">Hvordan fungerer forsikring?</a></li>
+    <li><a href="#q-renter-problem">Hva skjer hvis det jeg leier ut blir skadet eller ikke levert tilbake?</a></li>
+    <li><a href="#q-rentee-problem">Hva skjer hvis det jeg skal leie ikke er tilgjengelig, eller ikke fungerer som forventet?</a></li>
+    <li><a href="#q-contact">Hvordan kan jeg kontakte Plendit hvis jeg trenger hjelp?</a></li>
+</ol>
+
+<article>
+    <h2 id="q-what-is-it">Hva er Plendit</h2>
+
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda dolores ea earum eius eveniet in nobis nostrum odio placeat quae quaerat qui quidem ratione reiciendis rerum tempora, ullam ut voluptatum!
+    </p>
+</article>
+
+
+<article>
+    <h2 id="q-rentable">Hva kan jeg leie ut?</h2>
+
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda dolores ea earum eius eveniet in nobis nostrum odio placeat quae quaerat qui quidem ratione reiciendis rerum tempora, ullam ut voluptatum!
+    </p>
+</article>
+
+<article>
+    <h2 id="q-payment">Hvordan fungerer betaling?</h2>
+
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda dolores ea earum eius eveniet in nobis nostrum odio placeat quae quaerat qui quidem ratione reiciendis rerum tempora, ullam ut voluptatum!
+    </p>
+</article>
+
+
+<article>
+    <h2 id="q-insurance">Hvordan fungerer forsikring?</h2>
+
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda dolores ea earum eius eveniet in nobis nostrum odio placeat quae quaerat qui quidem ratione reiciendis rerum tempora, ullam ut voluptatum!
+    </p>
+</article>
+
+<article>
+    <h2 id="q-renter-problem">Hva skjer hvis det jeg leier ut blir skadet eller ikke levert tilbake?</h2>
+
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda dolores ea earum eius eveniet in nobis nostrum odio placeat quae quaerat qui quidem ratione reiciendis rerum tempora, ullam ut voluptatum!
+    </p>
+</article>
+
+<article>
+    <h2 id="q-rentee-problem">Hva skjer hvis det jeg skal leie ikke er tilgjengelig, eller ikke fungerer som forventet?</h2>
+
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda dolores ea earum eius eveniet in nobis nostrum odio placeat quae quaerat qui quidem ratione reiciendis rerum tempora, ullam ut voluptatum!
+    </p>
+</article>
+
+<article>
+    <h2 id="q-contact">Hvordan kan jeg kontakte Plendit hvis jeg trenger hjelp?</h2>
+
+    <p>
+        Se på <%= link_to 'siden med kontaktinformasjon.', contact_path %>
+    </p>
+</article>
