--- a/app/views/shared/_single_pageable_calendar.html.erb
+++ b/app/views/shared/_single_pageable_calendar.html.erb
@@ -8,13 +8,23 @@
         <div class="row single-pageable-calendar__calendar-holder">
             <div class="single-pageable-calendar__calendar-holder-inner">
                 <h4 class="single-pageable-calendar__month">
+                    <%# do not show calendars in the past %>
+                    <% if Date.today() < date.at_beginning_of_month %>
                     <%= link_to "◀", (single_calendar_ad_path ad.id,
                             {date: date.at_beginning_of_month.prev_month.to_s(:db)} ),
                             class: 'single-pageable-calendar__pager' %>
+                    <% else %>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <% end %>
                     <%= date.strftime("%B - %Y") %>
+                    <%# only show up to one year in the future %>
+                    <% if Date.today().at_beginning_of_month.next_year > date.at_beginning_of_month %>
                     <%= link_to "▶", (single_calendar_ad_path ad.id,
                             {date: date.at_beginning_of_month.next_month.to_s(:db) }),
                             class: 'single-pageable-calendar__pager' %>
+                    <% else %>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <% end %>
                 </h4>
                 <%= render partial: "shared/month_calendar", locals: { date: date, ad: ad } %>
             </div>
