--- a/app/views/users/_edit_profile.html.erb
+++ b/app/views/users/_edit_profile.html.erb
@@ -5,14 +5,14 @@
 
         <div class="row">
             <div class="six columns">
-                <%= f.label :name, "FIXME: Display Navn" %>
-                <%= f.text_field :display_name, class: "u-full-width" %>
+                <%= f.label :name, 'Visnignsnavn' %>
+                <%= f.text_field :display_name, value: @user.safe_display_name, class: "u-full-width" %>
             </div>
         </div>
 
         <div class="row">
             <div class="six columns">
-                <%= f.label :name, "FIXME: Fullt Navn" %>
+                <%= f.label :name, 'Fullt navn' %>
                 <%= f.text_field :name, class: "u-full-width" %>
             </div>
         </div>
