--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -6,7 +6,7 @@
         <div class="twelve columns">
             <%= render partial: "shared/ad_title_box", locals: { ad: @booking.ad } %>
 
-            <h2>Leieforespørsel til <%= @booking.ad.user.safe_display_name%></h2>
+            <h2>Leieforespørsel til <%= @booking.ad.user.safe_first_name%></h2>
 
             <%= render 'form' %>
 
