--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -10,15 +10,23 @@
 
                 <div class="row">
                     <div class="two-thirds column">
-                        <%= f.label :display_name, "FIXME: Display Navn:" %>
-                        <%= f.text_field :display_name, autofocus: true %>
+                        <%= f.label :first_name, "Fornavn:" %>
+                        <%= f.text_field :first_name, autofocus: true %>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="two-thirds column">
-                        <%= f.label :name, "FIXME: Fullt Navn:" %>
-                        <%= f.text_field :name %>
+                        <%= f.label :last_name, "FIXME: Etternavn:" %>
+                        <%= f.text_field :last_name %>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="two-thirds column">
+                        <%= f.label :birthday, "FIXME: Fødselsdato:" %>
+                        <%= f.date_field :birthday %>
+                        Det trenger vi pga av ditt og datt.
                     </div>
                 </div>
 
