--- a/app/views/users/_edit_profile.html.erb
+++ b/app/views/users/_edit_profile.html.erb
@@ -5,21 +5,21 @@
 
         <div class="row">
             <div class="six columns">
-                <%= f.label :first_name, "FIXME: Fornavn" %>
-                <%= f.text_field :first_name, class: "u-full-width" %>
+                <%= f.label :first_name, 'Fornavn:' %>
+                <%= f.text_field :first_name, class: 'u-full-width' %>
             </div>
         </div>
 
         <div class="row">
             <div class="six columns">
-                <%= f.label :last_name, "FIXME: Etternavn" %>
-                <%= f.text_field :last_name, class: "u-full-width" %>
+                <%= f.label :last_name, 'Etternavn:' %>
+                <%= f.text_field :last_name, class: 'u-full-width' %>
             </div>
         </div>
 
         <div class="row">
             <div class="two-thirds column">
-                <%= f.label :birthday, "FIXME: Fødselsdato:" %>
+                <%= f.label :birthday, 'Fødselsdato:' %>
                 <%= f.date_field :birthday %>
                 Det trenger vi pga av ditt og datt.
             </div>
@@ -27,8 +27,8 @@
 
         <div class="row">
             <div class="six columns">
-                <%= f.label :email, "E-post" %>
-                <%= f.text_field :email, class: "u-full-width" %>
+                <%= f.label :email, 'E-post:' %>
+                <%= f.text_field :email, class: 'u-full-width' %>
             </div>
         </div>
 
@@ -47,7 +47,7 @@
 
         <div class="row u-push-down">
             <div class="six columns">
-                <%= f.label :current_phone_number, "Telefonnummer" %>
+                <%= f.label :current_phone_number, 'Telefonnummer:' %>
                 <%= f.text_field :current_phone_number, { class: "u-full-width", maxlength: 8 } %>
             </div>
         </div>
