--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -8,6 +8,8 @@
 
                 <%= devise_error_messages! %>
 
+                <%= f.hidden_field :personhood, 'natural' %>
+
                 <div class="row">
                     <div class="two-thirds column">
                         <%= f.label :first_name, "Fornavn:" %>
