google_oath2 => google omniauth provider, added some stub code for DoB autodiscovery

--- a/app/views/users/_edit_identity.html.erb
+++ b/app/views/users/_edit_identity.html.erb
@@ -9,7 +9,7 @@
       image_size: '50x50'
     },
     {
-      id: "google_oauth2",
+      id: "google",
       name: 'Google',
       image: 'logos/google_50x50.png',
       image_size: '50x50'
