--- a/app/assets/stylesheets/_search.scss
+++ b/app/assets/stylesheets/_search.scss
@@ -117,3 +117,28 @@ $breakpoint: 550px;
     }
 
 }
+
+.result-infoview {
+    width: 320px;
+    height: 240px;
+    overflow: hidden;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+
+    &__body {
+        display: block;
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        background-color: rgba(255,255,255, 0.8);
+        padding: 0 $standard-spacing / 2 0 $standard-spacing / 2;
+        color: black;
+        text-decoration: none;
+    }
+
+    &__title {
+        margin-bottom: 0;
+    }
+
+}
